--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,17 +1,17 @@
-<!-- templates/login.html -->
 {% extends 'base.html' %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
-<h2>Login</h2>
-<form method="POST">
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username" required>
+<div class="form-container">
+    <h2>Login</h2>
+    <form method="POST" action="{{ url_for('auth.login') }}" class= "auth-form">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+    <div class="form-footer">
+        Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a>
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+</div>
 {% endblock %}
